--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#985e00" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1" />  
     <title>Survive</title>
   </head>
   <body>
 
     <div id="root"></div>
-    
+    <script src="../src/app.js"></script>
   </body>
 </html>
