--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <body>
 
     <div id="root"></div>
-    <script src="/static/app.js"></script>
+    <script src="../static/app.js"></script>
   </body>
 </html>
