--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <div id="root"></div>
-    <script src="../src/app.js"></script>
+    <div id="app"></div>
+    <script src="app.js"></script>
   </body>
 </html>
