--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <body>
 
     <div id="root"></div>
-    <!-- <script src="../src/App.js"></script> -->
+    
+    <script type="application/javascript" src="index.js"></script>
+
   </body>
 </html>
